# TesisdeGrado

MiniZDC2.0Spectrum/: mainProygen.cc  vis.mac
MiniZDC2.0Spectrum/include/: MyEventAction.hh  SciHit.hh  action.hh  generador.hh  geometria.hh  rootcreator.hh
MiniZDC2.0Spectrum/src/: MyEventAction.cc  SciHit.cc  SciSD.cc  action.cc  generador.cc  geometria.cc  rootcreator.cc
MiniZDC3.0Time/: CMakeLists.txt  mainProygen.cc  run.mac  salida_data1.root  vis.mac
MiniZDC3.0Time/include/: MyEventAction.hh  SciHit.hh  geometria.hh  leakHit.hh  leakSD.hh  rootcreator.hh  runAction.hh
MiniZDC3.0Time/src/: MyEventAction.cc  SciHit.cc  SciSD.cc  geometria.cc  leakHit.cc  leakSD.cc  rootcreator.cc  runAction.cc
MiniZDCTracking/: README  mainProygen.cc  run1.mac  vis.mac
MiniZDCTracking/include/: MyEventAction.hh  SciHit.hh  SciSD.hh  TrackingAction.hh  action.hh  generador.hh  geometria.hh  rootcreator.hh
MiniZDCTracking/src/: MyEventAction.cc  SciSD.cc  TrackingAction.cc  action.cc  generador.cc  geometria.cc  rootcreator.cc  runAction.cc
